Changelog
=========

1.1-dev - (unreleased)
----------------------

1.0 - (2012-03-05)
------------------
* Initial release
  [voineali]
