@@ -3,6 +3,8 @@ Changelog
 
 1.1-dev - (unreleased)
 ----------------------
+* Added watermark utility
+  [szabozo0]
 
 1.0 - (2012-03-05)
 ------------------
